syntax = "proto3";

package users;

service UsersService {
  rpc FindById (FindByIdRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc FindAllUsers (Empty) returns (UsersResponse);
}

message Empty {}

message FindByIdRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UsersResponse {
  repeated UserResponse users = 1;
}
